Bug 234192 Visio file in filepicker crashes mozilla r=dean_tessman sr=rbs